<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TipCalculatorActivity!</string>
    <string name="app_name">Tip Calculator</string>
    <string name="billTextView">Bill Total</string>
    <string name="billEditText">0.00</string>
    <string name="tenTextView">10%</string>
    <string name="fifteenTextView">15%</string>
    <string name="twentyTextView">20%</string>
    <string name="tipTextView">Tip</string>
    <string name="tip10EditText">0.00</string>
    <string name="tip15EditText">0.00</string>
    <string name="tip20EditText">0.00</string>
    <string name="totalTextView">Total</string>
    <string name="total10EditText">0.00</string>
    <string name="total15EditText">0.00</string>
    <string name="total20EditText">0.00</string>
    <string name="customTextView">Custom</string>
    <string name="customTipTextView">18%</string>
    <string name="tipCustomTextView">Tip</string>
    <string name="tipCustomEditText">0.00</string>
    <string name="totalCustomTextView">Total</string>
    <string name="totalCustomEditText">0.00</string>

</resources>